# COGIT

./: Cogit.spec  README.md  convert_icon.py  main.py  pyproject.toml  setup.iss
core/: config.py  git.py  session.py  status.py
ignore/: gitignore_template
tests/: test_config.py  test_git.py  test_session.py  test_status.py
ui/: main_window.py  settings_dialog.py
